# gmail-unsubscribe

./: .gitignore  .tool-versions  pyproject.toml  readme.md  reqs.txt  setup.py  unsubscribe.py
unsubscribe/: __init__.py
