[tool.poetry]
name = "gmail-unsubscribe"
version = "0.1.0"
description = ""
authors = ["Joe Lombrozo <joe@djeebus.net>"]
readme = "README.md"
packages = [{include = "unsubscribe"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
google-api-python-client = "^2.152.0"
oauth2client = "^4.1.3"
urlfetch = "^2.0.1"

[tool.poetry.scripts]
unsubscribe = "unsubscribe:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
